fix: set row-gap 45px for big screen

--- a/components/History/history.module.scss
+++ b/components/History/history.module.scss
@@ -45,5 +45,6 @@
     .self {
         height: unset;
         overflow: hidden;
+        row-gap: 45px;
     }
 }
